--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.4",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express": "^4.19.2",
+    "@types/swagger-ui-express": "^4.1.6",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
