add error.endware and validate update task and simple logger and asyncHandler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"]
 }
