--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "start:dev": "cross-env NODE_ENV=development npm start",
+    "start:dev": "cross-env NODE_ENV=development nodemon --watch src --exec ts-node src/index.ts",
     "start:prod": "cross-env NODE_ENV=production npm start"
   },
   "keywords": [],
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.5",
     "cross-env": "^7.0.3",
+    "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
